# cli-tools

./: .gitignore  README.md  SEGYImportDir  SegyDirToVDS  azure-psql  bicep  bluriness-compare  cli  cli-tools  clip  clip-gitdiff  cmdhelp  cmdhelpdict.json  convert-video-to-images  ct-react  ct-rust  ff  gaussian_splatting_ply_inspect  howto  image-browse  inspect-csv  inspect-segy  inspect-vds.py  kanmd  list_parquet_columns  mount_blob  notex  oteldebug  parquet-inspect  pete  pete-func  pick-sharpest-images  pyserve  pywatch  recursivesearchandreplace  requirements.txt  sharpness_compare  testtest.py  upload_blob  watchdag
watchdag-cli/: Cargo.toml  Makefile  README.md  report.md
watchdag-cli/.watchdag/: hashes
watchdag-cli/crates/test-utils/: Cargo.toml
watchdag-cli/examples/: global-local-watch.toml  use-hash.toml
watchdag-cli/src/: cli.rs  errors.rs  lib.rs  logging.rs  main.rs  types.rs
watchdag-cli/src/config/: loader.rs  mod.rs  model.rs  validate.rs
watchdag-cli/src/dag/: graph.rs  mod.rs  scheduler.rs  scheduler_step.rs  state_manager.rs  task_info.rs
watchdag-cli/src/engine/: core.rs  event_handlers.rs  mod.rs  queue.rs  runtime.rs
watchdag-cli/src/exec/: backend.rs  command.rs  executor_loop.rs  (+3 more)
watchdag-cli/tasks/: testability.md
watchdag-cli/tests/: dag_filtering.rs  examples_chain_trigger.rs  examples_configs_behaviour.rs  examples_global_watch.rs  examples_include_default.rs  examples_long_lived.rs  examples_long_lived_trigger.rs  examples_use_hash.rs  integration_cancel_behaviour.rs  run_on_own_files_only.rs  runtime_fake_executor.rs
(+99 files in other folders)
